# rag-evals

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
baselines/: baseline.json
data/sample/: corpus.jsonl  qa.jsonl
examples/: export_retrieved.py
examples/retrieved_jsonl/: retrieved.jsonl
src/ragevals/: __init__.py  cli.py  config.py  datasets.py  diff.py  generation.py  regression.py  retrieval.py  runner.py
src/ragevals/metrics/: __init__.py  judge.py  retrieval.py
tests/: test_cli.py  test_datasets.py  test_external_and_diff.py  test_judge.py  test_metrics_retrieval.py  test_regression.py  test_retrieval_and_runner.py
